Change the border of extention cards fix the wrap issue in the dark mode

--- a/style.css
+++ b/style.css
@@ -150,7 +150,8 @@ h1 {
   height: 200px;
   padding: 20px;
   border-radius: 15px;
-  border: 1px solid hsl(224, 25%, 26%);
+  border: none;
+  box-shadow: inset 0 0 0 1px hsl(224, 25%, 26%);
   display: flex;
   flex-direction: column;
   justify-content: space-between;
